# kizuna

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  requirements.txt  setup.py
csrc/: dispatch_utils.h  layernorm.cu  ops.h  torch_bindings.cpp
csrc/core/: registration.h  scalar_type.hpp  torch_bindings.cpp
csrc/istft/: istft_kernel.cu  istft_kernel.h  static_switch.h
examples/: example_usage.py
kizuna/: __init__.py  _custom_ops.py  api_server.py  pipeline.py
kizuna/modeling/: custom_op.py  istftnet.py  model.py  modules.py
tests/kernels/: test_layernorm.py  utils.py
